# beagles

./: README.md  pyproject.toml
beagles/: __init__.py  dataframe.py  io.py  series.py
tests/: test1.py
